--- a/hw/riscv/meson.build
+++ b/hw/riscv/meson.build
@@ -12,6 +12,7 @@ riscv_ss.add(when: 'CONFIG_SPIKE', if_true: files('spike.c'))
 riscv_ss.add(when: 'CONFIG_MICROCHIP_PFSOC', if_true: files('microchip_pfsoc.c'))
 riscv_ss.add(when: 'CONFIG_ACPI', if_true: files('virt-acpi-build.c'))
 riscv_ss.add(when: 'CONFIG_RISCV_SMARTL', if_true: files('smartl.c'))
+riscv_ss.add(when: 'CONFIG_RISCV_SMARTM', if_true: files('smartm.c'))
 riscv_ss.add(when: 'CONFIG_RISCV_SMARTH', if_true: files('smarth.c'))
 riscv_ss.add(when: 'CONFIG_RISCV_XIAOHUI', if_true: files('xiaohui.c'))
 riscv_ss.add(when: 'CONFIG_THEAD_PMU', if_true: files('thead_pmu.c'))
